# DebridDownloader

./: .gitignore  PROGRESS.md  README.md  index.html  package-lock.json  package.json  plan.md
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/: index.html  privacy.html
docs/superpowers/plans/: 2026-03-14-full-ui-redesign-v2.md  2026-03-15-github-pages-landing.md  (+4 more)
src/: App.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: downloader.rs  extractor.rs  lib.rs  main.rs  organizer.rs  rclone.rs  state.rs  watchlist.rs
src-tauri/src/api/: client.rs  downloads.rs  mod.rs  torrents.rs  types.rs  unrestrict.rs
src-tauri/src/commands/: auth.rs  backup.rs  downloads.rs  mod.rs  rclone.rs  search.rs  settings.rs  streaming.rs  torrents.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/providers/premiumize/: client.rs  types.rs
src-tauri/src/providers/real_debrid/: client.rs  types.rs
src-tauri/src/providers/torbox/: client.rs
src-tauri/src/scrapers/: jackett.rs  mod.rs  piratebay.rs  prowlarr.rs  thirteen37x.rs  torbox_search.rs  torznab.rs
src/api/: auth.ts  backup.ts  downloads.ts  providers.ts  search.ts  settings.ts  torrents.ts
src/components/: AddTorrentModal.tsx  CommandPalette.tsx  DataTable.tsx  IconRail.tsx  Layout.tsx  MasterDetail.tsx  MiniPlayer.tsx  SettingsModal.tsx  Sidebar.tsx  SlideOverPanel.tsx  TableToolbar.tsx  TorrentDetail.tsx
src/hooks/: useAuth.ts  useDownloadProgress.ts  useDownloadTasks.tsx
src/pages/: AboutPage.tsx  AuthPage.tsx  CompletedPage.tsx  DownloadsPage.tsx  HistoryPage.tsx  SearchPage.tsx  SettingsPage.tsx  TorrentsPage.tsx
src/styles/: index.css
src/types/: index.ts
(+9 files in other folders)
