[package]
name = "debriddownloader"
version = "1.6.2"
description = "Real-Debrid Torrent Downloader"
authors = ["Jonathan"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "debriddownloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
regex = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
urlencoding = "2"
zip = "2"
sevenz-rust2 = "0.13"
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
bzip2 = "0.4"
which = "7"
async-trait = "0.1"
quick-xml = "0.37"
sha1 = "0.10"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-notification = "2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "6"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"
